--- a/src/app/shared/components/how-it-works/for-seller-landlord/for-seller-landlord.component.html
+++ b/src/app/shared/components/how-it-works/for-seller-landlord/for-seller-landlord.component.html
@@ -9,9 +9,9 @@
 <ng-template #template let-item="item">
     <div class="row mt-3">
         <div class="col-xs-12 col-lg-6" [class.order-lg-1]="item.order === 1">
-            <img src="{{item.imageSrc}}" style="max-width: 100%;display: inherit;margin: 0 auto;" alt="..."/>
+            <img src="{{item.imageSrc}}" alt="..."/>
         </div>
-        <div class="col-xs-12 col-lg-6">
+        <div class="col-xs-12 col-lg-6 body-container">
             <div *ngFor="let el of item.description" class="text-col" [class.multi]="item.description.length > 1">
                 <h4>
                     <span style="width: 40px;">{{el.id}}</span>
