--- a/src/app/shared/components/how-it-works/for-seller-landlord/for-seller-landlord.component.scss
+++ b/src/app/shared/components/how-it-works/for-seller-landlord/for-seller-landlord.component.scss
@@ -1,4 +1,25 @@
 .sell-landlord{
+    img{
+        max-width: 80%;
+        display: inherit;
+        margin: 0 auto;
+
+        @media (max-width: 450px) {
+            max-width: 100%;
+        }
+    }
+
+    .body-container{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        padding: 0 50px;
+
+        @media (max-width: 450px) {
+            padding: 0px;
+        }
+    }
+
     .main-title {
         display: inline;
         padding: 5px;
@@ -8,7 +29,7 @@
         float: right;
     }
     .text-col {
-        margin-top: 90px;
+        // margin-top: 90px;
         &.multi {
             margin-top: 75px;
         }
@@ -16,6 +37,10 @@
             margin-top: 10px;
          }
         h4 {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 85%;
             span {
                 display: inline-block;
                 width: 40px;
