--- a/src/app/shared/components/blog/blog.component.scss
+++ b/src/app/shared/components/blog/blog.component.scss
@@ -15,6 +15,13 @@
         padding: 10px;
         cursor: pointer;
 
+        .card-body{
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            padding: 1rem 1rem 0 1rem;
+        }
+
         .overlay{ 
             border-top-right-radius: 0px;
             border-bottom-left-radius: 0px;
@@ -54,6 +61,39 @@
             // }
         }
     }
+
+    .location {
+        display: inline-block;
+        font-size: 14px;
+        color: #ababb6;
+        padding-bottom: 10px;
+        // margin-right: 15px;
+        // margin-left: 15px;
+        img {
+            width: 8px;
+            margin-right: 3px;
+        }
+
+        @media (max-width: 450px) {
+            font-size: 12px;
+        }
+    }
+
+    .date {
+        display: inline-block;
+        font-size: 14px;
+        color: #ababb6;
+        padding-bottom: 10px;
+        img {
+            width: 15px;
+            margin-right: 3px;
+        }
+
+        @media (max-width: 450px) {
+            font-size: 12px;
+        }
+    }
+
     .more {
         display: inline-block;
         width: 356px;
