--- a/src/app/shared/components/how-it-works/for-buyer-tenant/for-buyer-tenant.component.html
+++ b/src/app/shared/components/how-it-works/for-buyer-tenant/for-buyer-tenant.component.html
@@ -11,7 +11,7 @@
 
         <div class="col-xs-12 col-lg-6" [class.order-lg-1]="item.order === 1">
 
-                <img src="{{item.imageSrc}}" style="max-width: 70%;display: inherit;margin: 0 auto;" alt="..."/>
+                <img src="{{item.imageSrc}}" alt="..."/>
            
         </div>
 
@@ -19,7 +19,11 @@
 
                 <div *ngFor="let el of item.description" class="text-col" [class.multi]="item.description.length > 1">
                         <!-- <span style="width: 40px;">{{el.id}}</span> -->
-                    <h4 class="main-title">{{lang === 'en' ? el.head_en : el.head_ar}}</h4>
+                   
+                        <h4>
+                            <span style="width: 40px;">{{el.id}}</span>
+                            <h4 class="main-title">{{lang === 'en' ? el.head_en : el.head_ar}}</h4>
+                        </h4>
                     
                     <div style="height: 20px"> </div>
                     
