--- a/src/app/shared/components/how-it-works/for-buyer-tenant/for-buyer-tenant.component.scss
+++ b/src/app/shared/components/how-it-works/for-buyer-tenant/for-buyer-tenant.component.scss
@@ -1,11 +1,24 @@
 .buyer-tenant {
+    img{
+        max-width: 75%;
+        display: inherit;
+        margin: 0 auto;
+
+        @media (max-width: 450px) {
+            max-width: 100%;
+        }
+
+    }
+    
+
     .main-title {
         display: inline;
         color: #2c2c2c;
         vertical-align: top;
+        margin: 0px;
     }
     .text-col {
-        margin-top: 90px;
+        // margin-top: 90px;
         &.multi {
             margin-top: 75px;
         }
@@ -13,6 +26,11 @@
             margin-top: 10px;
         }
         h4 {
+            display: flex;
+            justify-content: space-around;
+            align-items: center;
+            width: 85%;
+
             span {
                 display: inline-block;
                 width: 40px;
@@ -36,6 +54,13 @@
     }
 
     .body-container{
-        padding: 0 130px 0px 130px;
+        padding: 0 50px 0px 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        @media (max-width: 450px) {
+            padding: 30px 0px 30px 0px;
+        }
     }
 }
